--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,4 +26,8 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:27.1.1'
     implementation 'com.android.support:support-v4:27.1.1'
     implementation 'com.google.android.gms:play-services-ads:15.0.1'
+    compile 'com.google.firebase:firebase-firestore:17.0.1'
+
 }
+
+apply plugin: 'com.google.gms.google-services'
