--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     implementation 'com.android.support:support-v4:27.1.1'
     implementation 'com.google.android.gms:play-services-ads:15.0.1'
     compile 'com.google.firebase:firebase-firestore:17.0.1'
+    compile 'com.google.firebase:firebase-database:16.0.1'
 
 }
 
