--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,10 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/NottitleBarTheme" >
+        android:theme="@style/NottitleBarTheme">
+       <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>
+
+
         <activity
             android:name="com.smartapps.saveyourreferrals.AddManualReferralActivity"
             android:label="@string/app_name"
@@ -54,6 +57,13 @@
             android:name="com.smartapps.saveyourreferrals.HowToUseActivity"
             android:label="@string/title_activity_how_to_user" >
         </activity>
+
+        <provider android:authorities="com.facebook.app.FacebookContentProvider1737003549720774"
+            android:name="com.facebook.FacebookContentProvider"
+            android:exported="true" />
+
+
     </application>
+
 
 </manifest>
